[gd_scene load_steps=13 format=3 uid="uid://bp60gc38j46qh"]

[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="1_3nkfk"]
[ext_resource type="Script" path="res://scenes/enemies/enemy.gd" id="1_cx41o"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="2_3c61q"]
[ext_resource type="Texture2D" uid="uid://c1k8jifwn6ffg" path="res://graphics/antlion-spritesheet.png" id="2_rdn6m"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="3_kovvh"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="4_so1i2"]
[ext_resource type="PackedScene" uid="uid://h88v2qytj37d" path="res://scenes/components/smooth_movement.tscn" id="6_7qu86"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cp2un"]
size = Vector2(39, 26)

[sub_resource type="Animation" id="Animation_uipv7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_v0wtw"]
resource_name = "death"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_3exd7"]
resource_name = "walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 10]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kbwei"]
_data = {
"RESET": SubResource("Animation_uipv7"),
"death": SubResource("Animation_v0wtw"),
"walk": SubResource("Animation_3exd7")
}

[node name="Enemy" type="Area2D" groups=["Enemies"]]
collision_layer = 4
collision_mask = 26
script = ExtResource("1_cx41o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4.5, 12)
shape = SubResource("RectangleShape2D_cp2un")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_rdn6m")
hframes = 8
vframes = 3
region_rect = Rect2(0, 0, 60, 60)

[node name="StateChart" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_3nkfk")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("2_3c61q")
initial_state = NodePath("Wander")

[node name="Wander" type="Node" parent="StateChart/Root"]
script = ExtResource("3_kovvh")

[node name="toDig" type="Node" parent="StateChart/Root/Wander"]
script = ExtResource("4_so1i2")
to = NodePath("../../Dig")
event = &"cannot_reach_player"

[node name="toChase" type="Node" parent="StateChart/Root/Wander"]
script = ExtResource("4_so1i2")
to = NodePath("../../Chase")
event = &"can_reach_player"

[node name="toStunned" type="Node" parent="StateChart/Root/Wander"]
script = ExtResource("4_so1i2")
to = NodePath("../../Stunned")
event = &"hit_by_player"

[node name="toDead" type="Node" parent="StateChart/Root/Wander"]
script = ExtResource("4_so1i2")
to = NodePath("../../Dead")
event = &"death"

[node name="Dig" type="Node" parent="StateChart/Root"]
script = ExtResource("3_kovvh")

[node name="toWander" type="Node" parent="StateChart/Root/Dig"]
script = ExtResource("4_so1i2")
to = NodePath("../../Wander")
event = &"cannot_reach_player"

[node name="toChase" type="Node" parent="StateChart/Root/Dig"]
script = ExtResource("4_so1i2")
to = NodePath("../../Chase")
event = &"can_reach_player"

[node name="toStunned" type="Node" parent="StateChart/Root/Dig"]
script = ExtResource("4_so1i2")
to = NodePath("../../Stunned")
event = &"hit_by_player"

[node name="toDead" type="Node" parent="StateChart/Root/Dig"]
script = ExtResource("4_so1i2")
to = NodePath("../../Dead")
event = &"death"

[node name="Chase" type="Node" parent="StateChart/Root"]
script = ExtResource("3_kovvh")

[node name="toWander" type="Node" parent="StateChart/Root/Chase"]
script = ExtResource("4_so1i2")
to = NodePath("../../Wander")
event = &"chase_timeout"

[node name="toStunned" type="Node" parent="StateChart/Root/Chase"]
script = ExtResource("4_so1i2")
to = NodePath("../../Stunned")
event = &"hit_by_player"

[node name="toDead" type="Node" parent="StateChart/Root/Chase"]
script = ExtResource("4_so1i2")
to = NodePath("../../Dead")
event = &"death"

[node name="Stunned" type="Node" parent="StateChart/Root"]
script = ExtResource("3_kovvh")

[node name="toChase" type="Node" parent="StateChart/Root/Stunned"]
script = ExtResource("4_so1i2")
to = NodePath("../../Chase")
event = &"stun_broken"

[node name="toDead" type="Node" parent="StateChart/Root/Stunned"]
script = ExtResource("4_so1i2")
to = NodePath("../../Dead")
event = &"death"

[node name="Dead" type="Node" parent="StateChart/Root"]
script = ExtResource("3_kovvh")

[node name="SmoothMovement" parent="." instance=ExtResource("6_7qu86")]
unique_name_in_owner = true

[node name="WanderTimer" type="Timer" parent="."]
one_shot = true

[node name="ChaseTimer" type="Timer" parent="."]

[node name="KillTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_kbwei")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="state_entered" from="StateChart/Root/Wander" to="." method="_on_wander_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Wander" to="." method="_on_wander_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Dig" to="." method="_on_dig_state_entered"]
[connection signal="state_exited" from="StateChart/Root/Dig" to="." method="_on_dig_state_exited"]
[connection signal="state_physics_processing" from="StateChart/Root/Dig" to="." method="_on_dig_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Chase" to="." method="_on_chase_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Chase" to="." method="_on_chase_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Stunned" to="." method="_on_stunned_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Dead" to="." method="_on_dead_state_entered"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_wander_timer_timeout"]
[connection signal="timeout" from="ChaseTimer" to="." method="_on_chase_timer_timeout"]
[connection signal="timeout" from="KillTimer" to="." method="_on_kill_timer_timeout"]
